# GabMus-notorious

./: .gitignore  .gitlab-ci.yml  README.md  meson.build
data/: org.gabmus.notorious.appdata.xml.in  org.gabmus.notorious.desktop.in  org.gabmus.notorious.gresource.xml  org.gabmus.notorious.service.desktop
data/ui/: aboutdialog.glade.in  gtk_style.css  headerbar.glade  listbox_with_empty_state.glade  main_ui.glade  menu.xml  meson.build  shortcutsWindow.xml
notorious/: __main__.py  app_window.py  confManager.py  file_manager.py  files_listbox_row.py  headerbar.py  listbox_with_empty_state.py  main_ui.py  settings_window.py
po/: POTFILES.in  it.po  update_potfiles.sh
website/: index.html  page.md  style.css
